--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         .font-lato {
             font-family: 'Lato', sans-serif;
         }
+        .slid-b{
+            background-color: black;
+            color: white;
+            border: none;
+            padding: 0;
+        }
     </style>
 
 </head>
@@ -51,17 +57,15 @@
                 <a class="btn btn-ghost normal-case text-xl"></a>
             </div>
             <div class="navbar-end flex-1">
-                <div class="">
-                    <div class="form-control invisible lg:visible ">
-                        <input type="text" placeholder="Search" class="input input-bordered rounded-full w-96 font-normal" />
-                        <div class=" text-gray-400 absolute top-7 right-12 ">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                            </svg>
+                <div class="form-control invisible lg:visible px-4 mt-3 ">
+                    <input type="text" placeholder="Search" class="input input-bordered rounded-full w-80 font-normal " />
+                    <div class=" text-gray-400 ">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4  text-gray-400 relative bottom-8 left-72 " fill="none" viewBox="0 0 24 24"
+                            stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
 
-                        </div>
                     </div>
                 </div>
                 <div class="dropdown">
@@ -82,6 +86,63 @@
                 </div>
             </div>
         </div>
+        <!-- banner section -->
+        <section class="mt-14">
+            <div class="carousel w-full h-auto md:h-auto lg:h-[500px]">
+                <div id="slide1" class="carousel-item relative w-full">
+                  <img src="/images/banner1.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
+                    <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a> 
+                    <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❯</a>
+                  </div>
+                </div> 
+                <div id="slide2" class="carousel-item relative w-full">
+                  <img src="/images/banner2.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
+                    <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a> 
+                    <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                  </div>
+                </div> 
+                <div id="slide3" class="carousel-item relative w-full">
+                  <img src="/images/banner3.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
+                    <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a> 
+                    <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                  </div>
+                </div> 
+                <div id="slide4" class="carousel-item relative w-full">
+                  <img src="/images/banner4.png" class="w-full" />
+                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
+                    <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a> 
+                    <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                  </div>
+                </div>
+              </div>
+              <div class="w-4/5 mx-auto bg-white flex mb-32 justify-between rounded-md relative bottom-28 shadow-md px-16 py-12 gap-20 items-center">
+                <div class="flex-col">
+                    <img src="images/fruit1.png" alt="">
+                    <p class="text-center">Grapes</p>
+                </div>
+                <div class="flex-col">
+                    <img src="images/fruit2.png" alt="">
+                    <p class="text-center">Orange</p>
+                </div>
+                <div class="flex-col">
+                    <img  src="images/fruit3.png" alt="">
+                    <p class="text-center">Mango</p>
+                </div>
+                <div class="flex-col">
+                    <img src="images/fruit4.png" alt="">
+                    <p class="text-center">Strawberry</p>
+                </div>
+                <div class="flex-col">
+                    <img src="images/fruit5.png" alt="">
+                    <p class="text-center">Pomegranate</p>
+                </div>
+                
+              </div>
+
+        </section>
     </header>
     <main>
 
