--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         .font-lato {
             font-family: 'Lato', sans-serif;
         }
-        .slid-b{
+
+        .slid-b {
             background-color: black;
             color: white;
             border: none;
@@ -39,7 +40,7 @@
 </head>
 
 <body class="font-lato ">
-    <header class=" container mx-auto " >
+    <header class=" container mx-auto ">
         <div class="navbar  lg:bg-[#F85559]  lg:rounded-full lg:text-white ">
             <div class="navbar-start hidden lg:flex flex-1">
                 <ul class="menu menu-horizontal px-1 text-sm font-normal">
@@ -57,10 +58,12 @@
                 <a class="btn btn-ghost normal-case text-xl"></a>
             </div>
             <div class="navbar-end flex-1">
-                <div class="form-control invisible lg:visible px-4 mt-3 ">
-                    <input type="text" placeholder="Search" class="input input-bordered rounded-full w-80 font-normal " />
+                <div class="form-control hidden lg:block px-4 mt-3 ">
+                    <input type="text" placeholder="Search"
+                        class="input input-bordered rounded-full w-80 font-normal " />
                     <div class=" text-gray-400 ">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4  text-gray-400 relative bottom-8 left-72 " fill="none" viewBox="0 0 24 24"
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            class="h-4 w-4  text-gray-400 relative bottom-8 left-72 " fill="none" viewBox="0 0 24 24"
                             stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                 d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
@@ -88,37 +91,87 @@
         </div>
         <!-- banner section -->
         <section class="mt-14">
-            <div class="carousel w-full h-auto md:h-auto lg:h-[500px]">
-                <div id="slide1" class="carousel-item relative w-full">
-                  <img src="/images/banner1.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
-                    <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a> 
-                    <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❯</a>
-                  </div>
-                </div> 
-                <div id="slide2" class="carousel-item relative w-full">
-                  <img src="/images/banner2.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
-                    <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a> 
-                    <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
-                  </div>
-                </div> 
-                <div id="slide3" class="carousel-item relative w-full">
-                  <img src="/images/banner3.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
-                    <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a> 
-                    <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
-                  </div>
-                </div> 
-                <div id="slide4" class="carousel-item relative w-full">
-                  <img src="/images/banner4.png" class="w-full" />
-                  <div class="absolute flex justify-between transform -translate-y-1/2 left-10 right-10 top-1/2">
-                    <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a> 
-                    <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
-                  </div>
+            <div class="carousel container lg:w-full w-auto h-auto md:h-auto lg:h-[500px]">
+                <div id="slide1" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
+                    style="background-image: url(images/banner1.png);">
+                    <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
+                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                            <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
+                        <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a>
+                        <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❯</a>
+                    </div>
                 </div>
-              </div>
-              <div class="w-4/5 mx-auto bg-white flex mb-32 justify-between rounded-md relative bottom-28 shadow-md px-16 py-12 gap-20 items-center">
+                <div id="slide2" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
+                    style="background-image: url(images/banner2.png);">
+                    <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
+                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                            <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep
+                            </h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop
+                                Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
+                        <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a>
+                        <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                    </div>
+                </div>
+                <div id="slide3" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
+                style="background-image: url(images/banner3.png);">
+                    <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
+                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                            <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep</h1>
+                            <p>We supply highly quality organic products</p>
+                            <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop Now</button>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
+                        <a href="#slide2" class="btn slid-b btn-circle lg:w-14 lg:h-14 ">❮</a>
+                        <a href="#slide4" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                    </div>
+                </div>
+                <!-- <div id="slide4" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
+                style="background-image: url(images/banner4.png);">
+                    <div>
+
+                        <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
+                            <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                                <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep</h1>
+                                <p>We supply highly quality organic products</p>
+                                <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop Now</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
+                        <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a>
+                        <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                    </div>
+                </div> -->
+                <!-- kono ak error ar jonno slide4 change korle responsive na hoye udhaw hoye jacee sob -->
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="images/banner4.png" alt="">
+                    
+                    <div
+                        class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
+                        <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a>
+                        <a href="#slide1" class="btn slid-b btn-circle lg:w-14 lg:h-14">❯</a>
+                    </div>
+                </div>
+            </div>
+            <div
+                class="w-4/5 mx-auto bg-white lg:flex mb-28 justify-between rounded-md relative bottom-28 shadow-md px-16 py-12 gap-20 items-center hidden lg:block">
                 <div class="flex-col">
                     <img src="images/fruit1.png" alt="">
                     <p class="text-center">Grapes</p>
@@ -128,7 +181,7 @@
                     <p class="text-center">Orange</p>
                 </div>
                 <div class="flex-col">
-                    <img  src="images/fruit3.png" alt="">
+                    <img src="images/fruit3.png" alt="">
                     <p class="text-center">Mango</p>
                 </div>
                 <div class="flex-col">
@@ -139,12 +192,12 @@
                     <img src="images/fruit5.png" alt="">
                     <p class="text-center">Pomegranate</p>
                 </div>
-                
-              </div>
+
+            </div>
 
         </section>
     </header>
-    <main>
+    <main class="container mx-auto">
 
     </main>
     <footer>
