--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
             </div>
             <div
-                class="w-4/5 mx-auto bg-white lg:flex mb-28 justify-between rounded-md relative bottom-28 shadow-md px-16 py-12 gap-20 items-center hidden lg:block">
+                class="w-4/5 mx-auto bg-white lg:flex mb-28 justify-between rounded-md relative bottom-12 shadow-md px-16 py-12 gap-20 items-center hidden lg:block">
                 <div class="flex-col">
                     <img src="images/fruit1.png" alt="">
                     <p class="text-center">Grapes</p>
@@ -198,6 +198,42 @@
         </section>
     </header>
     <main class="container mx-auto">
+        <!-- count down -->
+        <section class=" text-center lg:text-left lg:flex lg:justify-between items-center ">
+            <div class="flex-1">
+                <h2 class=" lg:text-5xl text-xl font-extrabold mb-4 mt-4 lg:mt-4">Deal of the day</h2>
+                <p class="text-xs lg:w-[600px] mb-4">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+            <div class="px-20 lg:p-0">
+
+                <div class="grid grid-flow-col gap-5 text-center auto-cols-max ">
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:29;"></span>
+                      </span>
+                      days
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:15;"></span>
+                      </span>
+                      hours
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:25;"></span>
+                      </span>
+                      min
+                    </div> 
+                    <div class="flex flex-col">
+                      <span class="countdown font-mono text-5xl">
+                        <span style="--value:08;"></span>
+                      </span>
+                      sec
+                    </div>
+                  </div>
+            </div>
+        </section>
 
     </main>
     <footer>
