--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div id="slide1" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
                     style="background-image: url(images/banner1.png);">
                     <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
-                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                        <div class="text-center text-white items-center mt-3 md:mt-16 lg:mt-20  ">
                             <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep
                             </h1>
                             <p>We supply highly quality organic products</p>
@@ -112,7 +112,7 @@
                 <div id="slide2" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
                     style="background-image: url(images/banner2.png);">
                     <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
-                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                        <div class="text-center text-white items-center mt-3 md:mt-16 lg:mt-20  ">
                             <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep
                             </h1>
                             <p>We supply highly quality organic products</p>
@@ -127,12 +127,14 @@
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative bg-center bg-cover bg-80% w-full  justify-center"
-                style="background-image: url(images/banner3.png);">
+                    style="background-image: url(images/banner3.png);">
                     <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
-                        <div class="text-center text-white items-center mt-3 lg:mt-20  ">
-                            <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep</h1>
+                        <div class="text-center text-white items-center mt-3 md:mt-16 lg:mt-20  ">
+                            <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep
+                            </h1>
                             <p>We supply highly quality organic products</p>
-                            <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop Now</button>
+                            <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop
+                                Now</button>
                         </div>
                     </div>
                     <div
@@ -146,7 +148,7 @@
                     <div>
 
                         <div class="absolute  inset-0 bg-black bg-opacity-50 flex  justify-center">
-                            <div class="text-center text-white items-center mt-3 lg:mt-20  ">
+                            <div class="text-center text-white items-center mt-3 md:mt-16 lg:mt-20  ">
                                 <h1 class=" text-2xl lg:text-7xl font-extrabold lg:mb-6">Exotic tastes at your <br> doorstep</h1>
                                 <p>We supply highly quality organic products</p>
                                 <button class="btn btn-error text-white capitalize px-5 lg:px-7 mt-4 lg:mt-7">Shop Now</button>
@@ -162,7 +164,7 @@
                 <!-- kono ak error ar jonno slide4 change korle responsive na hoye udhaw hoye jacee sob -->
                 <div id="slide4" class="carousel-item relative w-full">
                     <img src="images/banner4.png" alt="">
-                    
+
                     <div
                         class="absolute flex justify-between transform -translate-y-1/2 left-3 right-3 lg:left-10 lg:right-10 top-1/2">
                         <a href="#slide3" class="btn slid-b btn-circle lg:w-14 lg:h-14">❮</a>
@@ -171,7 +173,7 @@
                 </div>
             </div>
             <div
-                class="w-4/5 mx-auto bg-white lg:flex mb-28 justify-between rounded-md relative bottom-12 shadow-md px-16 py-12 gap-20 items-center hidden lg:block">
+                class="w-4/5 mx-auto bg-white lg:flex mb-28 justify-between rounded-md relative bottom-12 shadow-xl px-16 py-12 gap-20 items-center hidden lg:block">
                 <div class="flex-col">
                     <img src="images/fruit1.png" alt="">
                     <p class="text-center">Grapes</p>
@@ -202,43 +204,148 @@
         <section class=" text-center lg:text-left lg:flex lg:justify-between items-center ">
             <div class="flex-1">
                 <h2 class=" lg:text-5xl text-xl font-extrabold mb-4 mt-4 lg:mt-4">Deal of the day</h2>
-                <p class="text-xs lg:w-[600px] mb-4">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                <p class="text-xs lg:w-[600px] mb-4">Contrary to popular belief, is not simply random text. It has roots
+                    in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div class="px-20 lg:p-0">
+            <div class="px-20 md:px-60 lg:p-0">
 
                 <div class="grid grid-flow-col gap-5 text-center auto-cols-max ">
                     <div class="flex flex-col">
-                      <span class="countdown font-mono text-5xl">
-                        <span style="--value:29;"></span>
-                      </span>
-                      days
-                    </div> 
-                    <div class="flex flex-col">
-                      <span class="countdown font-mono text-5xl">
-                        <span style="--value:15;"></span>
-                      </span>
-                      hours
-                    </div> 
-                    <div class="flex flex-col">
-                      <span class="countdown font-mono text-5xl">
-                        <span style="--value:25;"></span>
-                      </span>
-                      min
-                    </div> 
-                    <div class="flex flex-col">
-                      <span class="countdown font-mono text-5xl">
-                        <span style="--value:08;"></span>
-                      </span>
-                      sec
+                        <span class="countdown font-mono text-5xl">
+                            <span style="--value:29;"></span>
+                        </span>
+                        days
                     </div>
-                  </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-5xl">
+                            <span style="--value:15;"></span>
+                        </span>
+                        hours
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-5xl">
+                            <span style="--value:25;"></span>
+                        </span>
+                        min
+                    </div>
+                    <div class="flex flex-col">
+                        <span class="countdown font-mono text-5xl">
+                            <span style="--value:08;"></span>
+                        </span>
+                        sec
+                    </div>
+                </div>
             </div>
+        </section>
+        <!-- cards -->
+        <section class="container mx-auto mt-8 ">
+            <div class=" grid grid-cols-1 md:grid-cols-2 lg:flex px-4 lg:p-0 lg:gap-6 gap-3 ml-11 lg:ml-0">
+                <!-- card one -->
+                <div class="card w-80 bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit6.png" alt="apple" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <hr class="border-b border-black">
+                        <p class="text-xs pt-4 border-t-2 px-14">Apples</p>
+                        <div class="rating mt-4">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] my-5 font-medium">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card two -->
+                <div class="card w-80 bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit7.png" alt="apple" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <hr class="border-b border-black">
+                        <p class="text-xs pt-4 border-t-2 px-14">Orange</p>
+                        <div class="rating mt-4">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] my-5 font-medium">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card third -->
+                <div class="card w-80 bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit8.png" alt="apple" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <hr class="border-b border-black">
+                        <p class="text-xs pt-4 border-t-2 px-14">Red Dragon</p>
+                        <div class="rating mt-4">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] my-5 font-medium">Details</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- card fourth -->
+                <div class="card w-80 bg-base-100 border">
+                    <figure class="px-10 pt-10">
+                        <img src="/images/fruit9.png" alt="apple" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="card-title">12.90$ - 18.85$</h2>
+                        <hr class="border-b border-black">
+                        <p class="text-xs pt-4 border-t-2 px-14">Banana</p>
+                        <div class="rating mt-4">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <div class="card-actions">
+                            <a href="#my_modal_8" class="text-[#F85559] my-5 font-medium">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+
+                <button class="btn btn-error text-white mt-16">Shop All</button>
+            </div>
+
         </section>
 
     </main>
     <footer>
 
     </footer>
+    <!-- modal 1 -->
+    <div class="modal" id="my_modal_8">
+        <div class="modal-box">
+            <h3 class="font-bold text-lg">Hello!</h3>
+            <p class="py-4">This modal works with anchor links</p>
+            <div class="modal-action">
+                <a href="#" class="btn">Yay!</a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
