--- a/index.html
+++ b/index.html
@@ -397,25 +397,25 @@
                 <h2 class="text-5xl font-bold mt-36 pb-4">Why Choose Us</h2>
                 <p class="text-base  ">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div class="3in1 flex mb-36 mt-12 gap-12 lg:px-4 ">
+            <div class="3in1 flex flex-col md:flex-row lg:flex-row mb-36 mt-12 gap-12 lg:px-4 justify-center">
 
-                <div >
-                    <div class="flex items-center gap-3">
-                        <div><i class="fa-solid fa-users"></i></div>
+                <div class="text-center lg:text-left mt-5" >
+                    <div class="flex flex-col lg:flex-row items-center gap-3">
+                        <div class="text-2xl mt-4"><i class="fa-solid fa-users"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold underline underline-offset-[24px]">Dedicated Team</h2>
                             <p class="pt-2 text-xs mt-8"">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
-                    <div class="flex items-center gap-3">
-                        <div><i class="fa-solid fa-heart-circle-check"></i></div>
+                    <div class="flex flex-col lg:flex-row items-center gap-3">
+                        <div class="text-2xl mt-4"><i class="fa-solid fa-heart-circle-check"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold underline underline-offset-[24px]">Fresh is Best</h2>
                             <p class="pt-2 text-xs mt-8"" >Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
-                    <div class="flex items-center gap-3">
-                        <div><i class="fa-solid fa-gifts"></i></div>
+                    <div class="flex flex-col lg:flex-row items-center gap-3">
+                        <div class="text-2xl mt-4 "><i class="fa-solid fa-gifts"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold underline underline-offset-[24px]">Gift Certificates</h2>
                             <p class="pt-2 text-xs mt-8"">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
@@ -425,23 +425,23 @@
                 <div class="">
                     <img src="images/whychoose1.png" alt="">
                 </div>
-                <div class="text-right " >
-                    <div class="flex flex-row-reverse text-right items-center gap-3">
-                        <div><i class="fa-solid fa-apple-whole"></i></div>
+                <div class=" text-center lg:text-right " >
+                    <div class="flex flex-col lg:flex-row-reverse items-center gap-3">
+                        <div class="text-2xl mt-4"><i class="fa-solid fa-apple-whole"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold underline underline-offset-[24px]">Integrated Supplier</h2>
                             <p class="pt-2 text-xs mt-8" text-xs">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
-                    <div class="flex flex-row-reverse items-center gap-3">
-                        <div><i class="fa-solid fa-heart-circle-check"></i></div>
+                    <div class="flex flex-col lg:flex-row-reverse items-center gap-3">
+                        <div class="text-2xl mt-4"><i class="fa-solid fa-ice-cream"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold  underline underline-offset-[24px] ">Sustainable Practice</h2>
                             <p class="pt-2 text-xs mt-8">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                         </div>
                     </div>
-                    <div class="flex flex-row-reverse items-center gap-3">
-                        <div><i class="fa-solid fa-gifts"></i></div>
+                    <div class="flex flex-col lg:flex-row-reverse items-center gap-3">
+                        <div class="text-2xl mt-4"><i class="fa-solid fa-thumbs-up"></i></div>
                         <div>
                             <h2 class="text-2xl font-extrabold underline underline-offset-[24px]">The Benefits Only</h2>
                             <p class="pt-2 text-xs mt-8">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
