--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <p class="text-xs pt-4 border-t-2 px-14">Orange</p>
                         <div class="rating mt-4">
                             <input type="radio" name="rating- o1  " class="mask mask-star-2 bg-orange-400" />
-                            <input type="radio" name="rating-  o1  " class="mask mask-star-2 bg-orange-400" checked />
+                            <input type="radio" name="rating-  o1  " class="mask mask-star-2 bg-orange-400" checked >
                             <input type="radio" name="rating-  o1  " class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-  o1  " class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-  o1  " class="mask mask-star-2 bg-orange-400" />
