--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class=" grid grid-cols-1 md:grid-cols-2 lg:flex px-4 lg:p-0 lg:gap-6 gap-3 ml-11 lg:ml-0">
                 <!-- card one -->
                 <div class="card w-80 bg-base-100 border">
-                    <figure class="px-10 pt-10">"
+                    <figure class="px-10 pt-10">
                         <img src="images/fruit6.png" alt="" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
@@ -266,7 +266,7 @@
                 <!-- card two -->
                 <div class="card w-80 bg-base-100 border">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit7.png" alt="apple" class="rounded-xl" />
+                        <img src="images/fruit7.png" alt="apple" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -287,7 +287,7 @@
                 <!-- card third -->
                 <div class="card w-80 bg-base-100 border">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit8.png" alt="apple" class="rounded-xl" />
+                        <img src="images/fruit8.png" alt="apple" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
@@ -308,7 +308,7 @@
                 <!-- card fourth -->
                 <div class="card w-80 bg-base-100 border">
                     <figure class="px-10 pt-10">
-                        <img src="/images/fruit9.png" alt="apple" class="rounded-xl" />
+                        <img src="images/fruit9.png" alt="apple" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="card-title">12.90$ - 18.85$</h2>
